<resources>
    <string name="app_name">My Quiz</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="profile">Profile</string>
    <string name="email"></string>
    <string name="Password"></string>
    <string name="login">Login</string>
    <string name="newUser">I am a new User</string>
    <string name="SignUp">SignUp</string>
    <string name="username"></string>
    <string name="Beginner">LV 1:Beginner</string>
    <string name="timer">18</string>
    <string name="question">Question</string>
    <string name="countq">13 /</string>
    <string name="countq1">10 /</string>
    <string name="questions">How many students in your clas_From Korea?</string>
    <string name="option_1">Come</string>
    <string name="option_2">Come</string>
    <string name="option_3">Come</string>
    <string name="option_4">Come</string>
    <string name="Quit">Quit</string>
    <string name="Next">Next</string>
    <string name="EarnedCoins">Earned Coins</string>
    <string name="earnedcoin">150</string>
    <string name="Completation">Completation</string>
    <string name="TotalQuestion">Total Question</string>
    <string name="Correct">Correct</string>
    <string name="cotb">13</string>
    <string name="wtb">13</string>
    <string name="Wrong">Wrong</string>
    <string name="PlayAgain">Play Again</string>
    <string name="ReviewAnswer">Review Answer</string>
    <string name="ShareScore">Share Score</string>
    <string name="Home">Home</string>
    <string name="Leaderboard">Leaderboard</string>
    <string name="EditPersonalDetails">Edit Personal Details</string>
    <string name="DarkMode">Dark Mode</string>
    <string name="EditProfile">Edit Profile</string>
    <string name="ChangePassword">Change Password</string>
    <string name="Notification">Notification</string>
    <string name="Language">Language</string>
    <string name="Logout">Logout</string>
    <string name="SignUps">Sign Up</string>
    <string name="IamaAlreadyUser">I am a Already User</string>
    <string name="SignIn">SignIn</string>
    <string name="quizname">Android\nQuiz</string>
    <string name="quiznameq">Programming\nQuiz</string>
    <string name="studyquizsname">Study\nQuiz</string>
    <string name="engquizname">English\nQuiz</string>
    <string name="picquizcname">Picture\nQuiz</string>
    <string name="gkquizcname">Gk\nQuiz</string>
    <string name="CurrentCoins">Current Coins</string>
    <string name="mycoins">0</string>
    <string name="requiredtowidhraw">40.000 coins required to withdraw</string>
    <string name="gpay">Gpay Number</string>
    <string name="phonepayn">Phone Pay Number</string>
    <string name="sendRequest">Send Request</string>
    <string name="index">#</string>
    <string name="Notifications">Notification</string>
    <string name="notification_activity">NotificationView</string>

</resources>