<?xml version="1.0" encoding="UTF-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_45sdp"
    android:layout_marginTop="@dimen/_5sdp"
    android:background="@drawable/leaderds">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/myuserimg"
        android:layout_width="44dp"
        android:layout_height="46dp"
        android:layout_marginStart="12dp"
        android:src="@drawable/avatar"
        app:civ_border_color="#9E9C9D"
        app:civ_border_width="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.461" />

    <TextView
        android:id="@+id/index"
        android:layout_width="31dp"
        android:layout_height="28dp"
        android:layout_marginStart="16dp"
        android:text="@string/index"
        android:textColor="@color/textcolor"
        android:textSize="@dimen/_15ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/myuserimg"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.483" />

    <TextView
        android:id="@+id/name"
        android:layout_width="130dp"
        android:layout_height="32dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="2dp"
        android:fontFamily="@font/poppins_medium"
        android:paddingTop="@dimen/_5sdp"
        android:textAlignment="center"
        android:text="@string/username"
        android:textColor="@color/textcolor"
        app:layout_constraintBottom_toBottomOf="@+id/index"
        app:layout_constraintStart_toEndOf="@+id/index"
        app:layout_constraintTop_toTopOf="@+id/index"
        app:layout_constraintVertical_bias="0.375" />

    <TextView
        android:id="@+id/coins"
        android:layout_width="68dp"
        android:layout_height="25dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/Notifications"
        android:textColor="@color/textcolor"
        app:layout_constraintBottom_toBottomOf="@+id/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/name"
        app:layout_constraintTop_toTopOf="@+id/name"
        app:layout_constraintVertical_bias="0.8" />

</androidx.constraintlayout.widget.ConstraintLayout>