<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkcolor"
    android:orientation="vertical"
    tools:context=".Activitys.login">


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_250sdp"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/loginbc" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout2"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="@dimen/_270sdp"
                android:layout_height="@dimen/_47sdp"
                android:layout_marginTop="75dp"
                android:textColorHint="@color/black"
                app:boxBackgroundColor="@color/smookywhite"
                app:boxStrokeColor="@color/black"
                app:helperTextEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/email"
                    android:hint="Email"
                    android:text="@string/email"
                    android:textColor="@color/textcolor" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout3"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="@dimen/_270sdp"
                android:layout_height="@dimen/_47sdp"
                android:layout_marginTop="15dp"
                android:textColorHint="@color/black"
                app:boxBackgroundColor="@color/smookywhite"
                app:boxStrokeColor="@color/black"
                app:helperTextEnabled="true"
                app:layout_constraintEnd_toEndOf="@+id/textInputLayout2"
                app:layout_constraintStart_toStartOf="@+id/textInputLayout2"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout2">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/password"
                    android:hint="Password"
                    android:text="@string/Password"
                    android:textColor="@color/textcolor" />
            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:id="@+id/login"
                android:layout_width="@dimen/_225sdp"
                android:layout_height="@dimen/_45sdp"
                android:layout_gravity="center"
                android:layout_marginTop="80dp"
                android:background="@drawable/buttondesign"
                android:gravity="center"
                android:text="@string/login"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="25dp"
                app:layout_constraintEnd_toEndOf="@+id/textInputLayout3"
                app:layout_constraintStart_toStartOf="@+id/textInputLayout3"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout3" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="@dimen/_100ssp"
                android:layout_height="@dimen/_15ssp"
                android:layout_gravity="center"
                android:layout_marginStart="68dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/newUser"
                android:textAlignment="center"
                android:textColor="@color/textcolor"
                app:layout_constraintStart_toStartOf="@+id/login"
                app:layout_constraintTop_toBottomOf="@+id/login" />

            <TextView
                android:id="@+id/signups"
                android:layout_width="@dimen/_50ssp"
                android:layout_height="@dimen/_15ssp"
                android:layout_gravity="center"
                android:paddingRight="10dp"
                android:text="@string/SignUp"
                android:textAlignment="center"
                android:textColor="#00B0FF"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/textView10"
                app:layout_constraintEnd_toEndOf="@+id/login"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/textView10"
                app:layout_constraintTop_toTopOf="@+id/textView10"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:fontFamily="@font/poppins_medium"
                android:paddingLeft="@dimen/_15ssp"
                android:text="Welcome To My Quiz"
                android:textColor="@color/white"
                android:textSize="@dimen/_30sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.14"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <View
                android:id="@+id/view9"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="2dp"
                android:layout_marginEnd="8dp"
                android:background="#00B0FF"
                app:layout_constraintEnd_toEndOf="@+id/signups"
                app:layout_constraintStart_toEndOf="@+id/textView10"
                app:layout_constraintTop_toBottomOf="@+id/signups" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>